@@ -1,3 +1,6 @@
+2007-07-xx Jeff Connelly <jeff22homing.pidgin.im> - 0.10
+* Handle incoming text color formatting.
+
 2007-07-01 Jeff Connelly <jeff2@homing.pidgin.im> - 0.9
 * Fix crash on Windows when logging in (bug #1990)
 * Fix crash on Windows when viewing tooltip text (bug #1999)
